welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:5: error: reassignment to val
	{avance(); nbB=nbB+1;}} 
                      ^