welcome.lessons.welcome.variables.RunFour.scala.code
var nbB = 0 
for (nbB <- 0 to 4)
{while (!estSurBiscuit())
	{avance(); nbB=nbB+1;}}